// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReleaseAnnouncement > renders 1`] = `
<div
  aria-hidden="true"
  data-floating-ui-inert=""
>
  <button
    aria-controls=":r2:"
    aria-expanded="true"
    aria-haspopup="dialog"
    aria-label="open menu"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    data-state="open"
    role="button"
    tabindex="0"
  >
    Open menu
  </button>
</div>
`;

exports[`ReleaseAnnouncement > renders the component at the bottom of the trigger button 1`] = `
<div
  aria-hidden="true"
  data-floating-ui-inert=""
>
  <button
    aria-controls=":re:"
    aria-expanded="true"
    aria-haspopup="dialog"
    aria-label="open menu"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    data-state="open"
    role="button"
    tabindex="0"
  >
    Open menu
  </button>
</div>
`;

exports[`ReleaseAnnouncement > renders with a long label header and description 1`] = `
<div
  aria-hidden="true"
  data-floating-ui-inert=""
>
  <button
    aria-controls=":r8:"
    aria-expanded="true"
    aria-haspopup="dialog"
    aria-label="open menu"
    class="_button_2a1efe"
    data-kind="primary"
    data-size="lg"
    data-state="open"
    role="button"
    tabindex="0"
  >
    Open menu
  </button>
</div>
`;
